welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value absA
  absA = abs(10 - a)
  ^close10:3: error: not found: value absB
  absB = abs(10 - b)
  ^close10:4: error: not found: value absA
  if(absA < absB)
     ^close10:4: error: not found: value absB
  if(absA < absB)
            ^close10:6: error: not found: value absB
  else if(absB < absA)
          ^close10:6: error: not found: value absA
  else if(absB < absA)
                 ^