welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  absA = abs(10 - a)
  absB = abs(10 - b)
  if(absA < absB)
  	return a
  else if(absB < absA)
  	return b
  else
  	return 0
}